--- a/simple.html
+++ b/simple.html
@@ -70,8 +70,8 @@ footer {
 </style>
 </head>
 <body>
-
-<h2>CSS Layout Float</h2>
+CHanges done for add branch
+<h2>CSS Layout Float!!!!!! Changes</h2>
 <p>In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.</p>
 <p>Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)</p>
 
